infra/03.control_run_native_app/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: app-link
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: nginx
  type: ClusterIP
